k8s/nginx/8.1_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: static-server
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      app: static-server
  template:
    metadata:
      labels:
        app: static-server
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        volumeMounts:
        - name: static-content
          mountPath: /usr/share/nginx/html
      volumes:
      - name: static-content
        configMap:
          name: index-html
