k8s/nginx/8.2_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: static-server
  namespace: default
spec:
  selector:
    app: static-server
  type: ClusterIP
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
