k8s/nginx/9_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tracker-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
      #nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: tracker.km.home
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: tracker-svc
            port:
              number: 80
      - path: /
        pathType: Prefix
        backend:
          service:
            name: static-server
            port:
              number: 80
